[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/temp_assets/arrow.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/temp_assets/panel.png" type="Texture" id=2]
[ext_resource path="res://Npcs/Dialogue.gd" type="Script" id=3]
[ext_resource path="res://Npcs/Tween.gd" type="Script" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="AudioStreamSample" id=2]

[node name="Dialogue" type="PanelContainer"]
margin_right = 691.0
margin_bottom = 432.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource( 1 )
theme_type_variation = "Box"
script = ExtResource( 3 )

[node name="Dialogue_Box_texture" type="NinePatchRect" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 684.0
margin_bottom = 425.0
texture = ExtResource( 2 )

[node name="NEXT_arrow" type="TextureRect" parent="Dialogue_Box_texture"]
margin_right = 6.0
margin_bottom = 9.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Dialogue_Box_texture"]

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogue_Box_texture/MarginContainer"]

[node name="Tween" type="Tween" parent="Dialogue_Box_texture/MarginContainer/RichTextLabel"]
script = ExtResource( 4 )

[node name="success_sound" type="AudioStreamPlayer" parent="."]

[node name="Clicking_sound" type="AudioStreamPlayer" parent="."]
stream = SubResource( 2 )
